# SWE-gen-Cpp

./: README.md
tasks/: cpp_skip.txt
tasks/abseil__abseil-cpp-1811/: instruction.md  task.toml
tasks/abseil__abseil-cpp-1812/: instruction.md
tasks/abseil__abseil-cpp-1813/: instruction.md
tasks/abseil__abseil-cpp-1857/: instruction.md  task.toml
tasks/abseil__abseil-cpp-1990/: instruction.md
tasks/abseil__abseil-cpp-2007/: instruction.md
tasks/abseil__abseil-cpp-2008/: instruction.md
tasks/abseil__abseil-cpp-2009/: instruction.md
tasks/abseil__abseil-cpp-2010/: instruction.md  task.toml
tasks/abseil__abseil-cpp-2011/: instruction.md
tasks/apache__arrow-49390/: instruction.md  task.toml
tasks/catchorg__catch2-1843/: instruction.md
tasks/catchorg__catch2-2114/: instruction.md
tasks/catchorg__catch2-2125/: instruction.md  task.toml
tasks/catchorg__catch2-2177/: instruction.md
tasks/catchorg__catch2-2194/: instruction.md
tasks/catchorg__catch2-2257/: instruction.md
tasks/catchorg__catch2-2319/: instruction.md
tasks/catchorg__catch2-2376/: instruction.md
tasks/catchorg__catch2-2377/: instruction.md
tasks/catchorg__catch2-2394/: instruction.md
tasks/catchorg__catch2-2399/: instruction.md
tasks/catchorg__catch2-2408/: instruction.md  task.toml
tasks/catchorg__catch2-2554/: instruction.md  task.toml
tasks/catchorg__catch2-2675/: instruction.md
tasks/catchorg__catch2-2706/: instruction.md  task.toml
tasks/catchorg__catch2-2723/: instruction.md
tasks/gabime__spdlog-2610/tests/: CMakeLists.txt  test.sh  test_custom_callbacks.cpp
(+5608 files in other folders)
